init persistence